--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,9 +17,10 @@
     "sash.hoverBorder": "#fa1b49",
     "statusBarItem.remoteBackground": "#dd0531",
     "statusBarItem.remoteForeground": "#e7e7e7",
-    "tab.activeBorder": "blue",
-    "statusBar.background": "blue",
-    "statusBar.foreground": "#ffffff"
+    "tab.activeBorder": "#fa1b49",
+    "statusBar.background": "#dd0531",
+    "statusBar.foreground": "#e7e7e7",
+    "commandCenter.border": "#e7e7e799"
   },
   "peacock.color": "#dd0531"
 }
